--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,8 @@ apply(plugin: 'cuba')
 cuba {
     artifact {
         group = 'gr.netmechanics.cuba.afs'
-        version = '1.0.0'
-        isSnapshot = false
+        version = '1.1.0'
+        isSnapshot = true
     }
 }
 
